# imgui_video_player

./: CMakeLists.txt  README.md  conanfile.txt
conan/: run_conan.bat  run_conan.sh
tiny_video_decoder/: CMakeLists.txt
tiny_video_decoder/include/video_capture/: frame_queue.hpp  raw_frame.hpp  video_capture.hpp
tiny_video_decoder/src/: logger.hpp  video_capture.cpp
tiny_video_player/: CMakeLists.txt
tiny_video_player/src/: application.cpp  application.hpp  main.cpp  main_window.cpp  main_window.hpp
